# upload-master

./: CMakeLists.txt  README.md  Remand.md  data2.xlsx  det  rec  sort.cpp  sortClasas.cpp  test.py  work.py
math/: CMakeLists.txt
math/big_int/: CMakeLists.txt  README.md
math/big_int/big_int_source/: CMakeLists.txt  big_int.cpp  big_int.h  other.cpp  other.h
math/big_int/big_int_t/: CMakeLists.txt  test.cpp
math/matrix/: CMakeLists.txt  README.md  matrix.cpp  matrix.h  test.cpp
math/vector/: CMakeLists.txt  README.md  test.cpp  vector.cpp  vector.h
